--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
     </div>
   </div>
 
-  <div class="content">
-   <h2>
+ <div class="content">
+    <h1>Every Moment Brings Us Closer ❤️</h1>
+  <h2>
     <pre>
   
     In a world full of moments, my favorite ones are with you.
